--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -21,7 +21,7 @@ services:
         class: %oro_soap.handler.delete.class%
         parent: oro_soap.handler.delete.abstract
 
-    oro_soap.managet.entity_manager.abstract:
+    oro_soap.manager.entity_manager.abstract:
         abstract: true
         calls:
             - [setEventDispatcher, [@event_dispatcher]]
