BAP-6102: Add possibility to retrieve audit log entries through the API    - fix code review issues    - added alias for generic metadata provider

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -39,3 +39,6 @@ services:
             - @translator
         tags:
             - { name: oro_soap.metadata_provider }
+
+    oro_soap.provider.metadata:
+        alias: oro_soap.provider.metadata.chain
