OEE-609: Create REST API to get contact avatar

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -69,6 +69,7 @@ services:
         class: %oro_soap.entity_serializer.class%
         arguments:
             - @doctrine
+            - @oro_entity_config.config_manager
             - @oro_soap.entity_accessor
             - @oro_soap.entity_data_transformer
 
