OEE-620: Create REST API resource to get dictionary/enum items

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -88,5 +88,7 @@ services:
     # event listeners
     oro_soap.locale_listener:
         class: %oro_soap.locale_listener.class%
+        arguments:
+            - @stof_doctrine_extensions.listener.translatable
         tags:
             - { name: kernel.event_subscriber }
