--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -76,6 +76,7 @@ services:
             - @oro_entity_config.config_manager
             - @oro_soap.entity_accessor
             - @oro_soap.entity_data_transformer
+            - @oro_entity.query_hint_resolver
 
     oro_soap.entity_accessor:
         class: %oro_soap.entity_accessor.class%
