--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -93,3 +93,15 @@ services:
             - @stof_doctrine_extensions.listener.translatable
         tags:
             - { name: kernel.event_subscriber }
+
+    oro_soap.routing.options_resolver.old_options:
+        class: Oro\Bundle\SoapBundle\Routing\OldOptionsRouteOptionsResolver
+        public: false
+        tags:
+            - { name: routing.options_resolver }
+
+    oro_soap.api_doc_handler.old_options:
+        class: Oro\Bundle\SoapBundle\Routing\OldOptionsApiDocHandler
+        public: false
+        tags:
+            - { name: nelmio_api_doc.extractor.handler }
