--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -13,6 +13,9 @@ parameters:
 
     oro_soap.locale_listener.class:               Oro\Bundle\SoapBundle\EventListener\LocaleListener
 
+    # override BeSimple annotation complex type loader
+    besimple.soap.definition.loader.annot_complextype.class: Oro\Bundle\SoapBundle\ServiceDefinition\Loader\AnnotationComplexTypeLoader
+
 services:
     oro_soap.loader:
         class: %oro_soap.loader.class%
@@ -105,3 +108,12 @@ services:
         public: false
         tags:
             - { name: nelmio_api_doc.extractor.handler }
+
+#    disable soap property filter until user-level wsdl cache implemented
+#    oro_soap.definition.field_filter:
+#        class: Oro\Bundle\SoapBundle\ServiceDefinition\Loader\SoapAclFieldFilter
+#        public: false
+#        arguments:
+#            - @security.authorization_checker
+#        tags:
+#            - { name: oro_soap.definition.loader_filter }
